docs/core/v0.4/_sources/reference/tmlt/core/metrics/index.rst.txt



**************
metrics
**************

.. py:module:: tmlt.core.metrics

.. autoapi-nested-parse::

   Module containing metrics used for constructing measurements and transformations.











Classes
=======

.. list-table::

   * - :class:`.Metric`
     - Base class for input/output metrics.
   * - :class:`.NullMetric`
     - Metric for use when distance is undefined.
   * - :class:`.ExactNumberMetric`
     - A metric whose distances are exact numbers.
   * - :class:`.AbsoluteDifference`
     - The absolute value of the difference of two values.
   * - :class:`.SymmetricDifference`
     - The number of elements that are in only one of two sets.
   * - :class:`.HammingDistance`
     - The number of elements that are different between two sets of the same size.
   * - :class:`.AggregationMetric`
     - Distances resulting from aggregating distances of its components.
   * - :class:`.SumOf`
     - Distances resulting from summing distances of its components.
   * - :class:`.RootSumOfSquared`
     - The square root of the sum of the squares of component distances.
   * - :class:`.OnColumn`
     - The value of a metric applied to a single column treated as a vector.
   * - :class:`.OnColumns`
     - A tuple containing the values of multiple OnColumn metrics.
   * - :class:`.IfGroupedBy`
     - Distance between two DataFrames that shall be grouped by a given attribute.
   * - :class:`.DictMetric`
     - Distance between two dictionaries with identical sets of keys.
   * - :class:`.AddRemoveKeys`
     - The number of keys that dictionaries of dataframe differ by.

   
.. py:class:: Metric

   Bases: :class:`abc.ABC`

   Base class for input/output metrics.






   .. py:method:: validate(self, value)
      :abstractmethod:

      Raises an error if `value` not a valid distance.

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(self, value1, value2)
      :abstractmethod:

      Returns True if `value1` is less than or equal to `value2`.


   .. py:method:: supports_domain(self, domain)
      :abstractmethod:

      Return True if the metric is implemented for the passed domain.


   .. py:method:: distance(self, value1, value2, domain)
      :abstractmethod:

      Returns the metric distance between two elements of a supported domain.


   .. py:method:: __eq__(self, other)

      Return True if both metrics are equal.



   
.. py:class:: NullMetric

   Bases: :class:`Metric`

   Metric for use when distance is undefined.






   .. py:method:: validate(self, value)
      :abstractmethod:

      Raises an error if `value` not a valid distance.

      This method is not implemented.

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(self, value1, value2)
      :abstractmethod:

      Returns True if `value1` is less than or equal to `value2`.

      This method is not implemented.

      :param value1: A distance between two datasets under this metric.
      :param value2: A distance between two datasets under this metric.


   .. py:method:: supports_domain(self, domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(self, value1, value2, domain)
      :abstractmethod:

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(self, other)

      Return True if both metrics are equal.



   
.. py:class:: ExactNumberMetric

   Bases: :class:`Metric`

   A metric whose distances are exact numbers.






   .. py:method:: distance(self, value1, value2, domain)
      :abstractmethod:

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: validate(self, value)
      :abstractmethod:

      Raises an error if `value` not a valid distance.

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(self, value1, value2)
      :abstractmethod:

      Returns True if `value1` is less than or equal to `value2`.


   .. py:method:: supports_domain(self, domain)
      :abstractmethod:

      Return True if the metric is implemented for the passed domain.


   .. py:method:: __eq__(self, other)

      Return True if both metrics are equal.



   
.. py:class:: AbsoluteDifference

   Bases: :class:`ExactNumberMetric`

   The absolute value of the difference of two values.

   .. rubric:: Example

   >>> AbsoluteDifference().distance(
   ...     np.int64(20), np.int64(82), NumpyIntegerDomain()
   ... )
   62
   >>> # 1.2 is first converted to rational 5404319552844595/4503599627370496
   >>> AbsoluteDifference().distance(
   ...     np.float64(1.2), np.float64(1.0), NumpyFloatDomain()
   ... )
   900719925474099/4503599627370496






   .. py:method:: validate(self, value)

      Raises an error if `value` not a valid distance.

      * `value` must be a nonnegative real or infinite

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(self, value1, value2)

      Returns True if `value1` is less than or equal to `value2`.


   .. py:method:: supports_domain(self, domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(self, value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(self, other)

      Return True if both metrics are equal.



   
.. py:class:: SymmetricDifference

   Bases: :class:`ExactNumberMetric`

   The number of elements that are in only one of two sets.

   This metric is compatible with spark dataframes, pandas dataframes, and pandas
   series. It ignores ordering and, in the case of pandas, indices. That is, it treats
   each collection as a multiset of items. For non-grouped data, it treats each record
   as an item. For grouped data there are a few cases:

   - The distance between two groups with the same multi-set of records is 0
   - The distance between two groups where exactly one is empty is 1
   - The distance between two groups with different records (where neither is empty) is
     2

   .. rubric:: Examples

   >>> import pandas as pd
   >>> from pyspark.sql import SparkSession
   >>> from tmlt.core.domains.spark_domains import (
   ...     SparkColumnsDescriptor,
   ...     SparkIntegerColumnDescriptor,
   ... )
   >>> spark = SparkSession.builder.getOrCreate()
   >>> domain = SparkDataFrameDomain(
   ...     {
   ...         "A": SparkIntegerColumnDescriptor(),
   ...         "B": SparkIntegerColumnDescriptor(),
   ...     }
   ... )
   >>> df1 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [1, 1, 1, 2, 3], "B": [2, 2, 2, 4, 3]})
   ... )
   >>> df2 = spark.createDataFrame(pd.DataFrame({"A": [1, 2, 1], "B": [2, 4, 1]}))
   >>> SymmetricDifference().distance(df1, df2, domain)
   4
   >>> group_keys = spark.createDataFrame(pd.DataFrame({"B": [1, 2, 4]}))
   >>> domain = SparkGroupedDataFrameDomain(
   ...     {
   ...         "A": SparkIntegerColumnDescriptor(),
   ...         "B": SparkIntegerColumnDescriptor(),
   ...     },
   ...     group_keys,
   ... )
   >>> grouped_df1 = GroupedDataFrame(df1, group_keys)
   >>> grouped_df2 = GroupedDataFrame(df2, group_keys)
   >>> SymmetricDifference().distance(grouped_df1, grouped_df2, domain)
   3






   .. py:method:: validate(self, value)

      Raises an error if `value` not a valid distance.

      * `value` must be a nonnegative integer or infinity

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(self, value1, value2)

      Returns True if `value1` is less than or equal to `value2`.


   .. py:method:: supports_domain(self, domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(self, value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(self, other)

      Return True if both metrics are equal.



   
.. py:class:: HammingDistance

   Bases: :class:`ExactNumberMetric`

   The number of elements that are different between two sets of the same size.

   This metric is compatible with spark dataframes, pandas dataframes, and pandas
   series. It ignores ordering and, in the case of pandas, indices. That is, it treats
   each collection as a multiset of records.

   If the sets are not the same size, the distance is infinity.

   .. rubric:: Example

   >>> import pandas as pd
   >>> from pyspark.sql import SparkSession
   >>> from tmlt.core.domains.spark_domains import SparkColumnsDescriptor
   >>> from tmlt.core.domains.spark_domains import (
   ...     SparkIntegerColumnDescriptor,
   ... )
   >>> spark = SparkSession.builder.getOrCreate()
   >>> domain = SparkDataFrameDomain(
   ...     {
   ...         "A": SparkIntegerColumnDescriptor(),
   ...         "B": SparkIntegerColumnDescriptor(),
   ...     }
   ... )
   >>> df1 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [1, 1, 1, 3], "B": [2, 2, 2, 4]})
   ... )
   >>> df2 = spark.createDataFrame(pd.DataFrame({"A": [1, 2], "B": [2, 4]}))
   >>> HammingDistance().distance(df1, df2, domain)
   oo
   >>> df3 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [1, 2, 3, 1], "B": [2, 4, 4, 2]})
   ... )
   >>> HammingDistance().distance(df1, df3, domain)
   1






   .. py:method:: validate(self, value)

      Raises an error if `value` not a valid distance.

      * `value` must be a nonnegative and integer or infinity

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(self, value1, value2)

      Returns True if `value1` is less than or equal to `value2`.


   .. py:method:: supports_domain(self, domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(self, value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(self, other)

      Return True if both metrics are equal.



   
.. py:class:: AggregationMetric(inner_metric)

   Bases: :class:`ExactNumberMetric`

   Distances resulting from aggregating distances of its components.

   Components may be elements of a series, groups of a grouped dataframe, or elements
   of a list. This metric is parameterized by an `inner_metric` that is used to compute
   the distances of the components. See :class:`SumOf` or :class`RootSumOfSquared` for
   example usage.






   .. automethod:: __init__
   .. py:method:: inner_metric(self)
      :property:

      Returns metric to be used for summing.


   .. py:method:: compare(self, value1, value2)

      Returns True if `value1` is less than or equal to `value2`.

      :param value1: A distance between two datasets under this metric.
      :param value2: A distance between two datasets under this metric.


   .. py:method:: supports_domain(self, domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(self, value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: validate(self, value)
      :abstractmethod:

      Raises an error if `value` not a valid distance.

      :param value: A distance between two datasets under this metric.


   .. py:method:: __eq__(self, other)

      Return True if both metrics are equal.



   
.. py:class:: SumOf(inner_metric)

   Bases: :class:`AggregationMetric`

   Distances resulting from summing distances of its components.

   These components may be elements of a series, groups of a grouped dataframe, or
   elements of a list. This metric is parameterized by an `inner_metric` that is used
   to compute the distances of the components.

   .. rubric:: Example

   >>> import pandas as pd
   >>> from pyspark.sql import SparkSession
   >>> from tmlt.core.domains.spark_domains import SparkColumnsDescriptor
   >>> from tmlt.core.domains.spark_domains import (
   ...     SparkIntegerColumnDescriptor,
   ... )
   >>> spark = SparkSession.builder.getOrCreate()

   >>> # Symmetric difference on SparkGroupedDataFrame
   >>> group_keys = spark.createDataFrame(pd.DataFrame({"A": [1, 2]}))
   >>> domain = SparkGroupedDataFrameDomain(
   ...     {
   ...         "A": SparkIntegerColumnDescriptor(),
   ...         "B": SparkIntegerColumnDescriptor(),
   ...     },
   ...     group_keys,
   ... )
   >>> df1 = GroupedDataFrame(
   ...     spark.createDataFrame(
   ...         pd.DataFrame({"A": [1, 1, 2, 3], "B": [1, 1, 2, 4]})
   ...     ),
   ...     group_keys,
   ... )
   >>> df2 = GroupedDataFrame(
   ...     spark.createDataFrame(
   ...         pd.DataFrame({"A": [1, 2, 2, 3], "B": [1, 3, 4, 5]})
   ...     ),
   ...     group_keys,
   ... )
   >>> SumOf(SymmetricDifference()).distance(df1, df2, domain)
   4
   >>> # Using HammingDistance gives a distance of infinity since the groups
   >>> # are different sizes, despite the fact that the two dataframes are the
   >>> # same size.
   >>> SumOf(HammingDistance()).distance(df1, df2, domain)
   oo

   >>> # Absolute difference on pandas series first converts the floats to
   >>> # rationals, then exactly computes the distance.
   >>> domain = PandasSeriesDomain(NumpyFloatDomain())
   >>> series1 = pd.Series([1.2, 0.8])
   >>> series2 = pd.Series([0.3, 1.4])
   >>> SumOf(AbsoluteDifference()).distance(series1, series2, domain)
   27021597764222973/18014398509481984






   .. automethod:: __init__
   .. py:method:: validate(self, value)

      Raises an error if `value` not a valid distance.

      * `value` must be a a valid distance for :attr:`~.inner_metric`

      :param value: A distance between two datasets under this metric.


   .. py:method:: inner_metric(self)
      :property:

      Returns metric to be used for summing.


   .. py:method:: compare(self, value1, value2)

      Returns True if `value1` is less than or equal to `value2`.

      :param value1: A distance between two datasets under this metric.
      :param value2: A distance between two datasets under this metric.


   .. py:method:: supports_domain(self, domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(self, value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(self, other)

      Return True if both metrics are equal.



   
.. py:class:: RootSumOfSquared(inner_metric)

   Bases: :class:`AggregationMetric`

   The square root of the sum of the squares of component distances.

   These components may be elements of a series, groups of a grouped dataframe, or
   elements of a list. This metric is parameterized by an `inner_metric` that is used
   to compute the distances of the components.

   .. rubric:: Example

   >>> import pandas as pd
   >>> from pyspark.sql import SparkSession
   >>> from tmlt.core.domains.spark_domains import SparkColumnsDescriptor
   >>> from tmlt.core.domains.spark_domains import (
   ...     SparkIntegerColumnDescriptor,
   ... )
   >>> spark = SparkSession.builder.getOrCreate()

   >>> # Symmetric difference on SparkGroupedDataFrame
   >>> group_keys = spark.createDataFrame(pd.DataFrame({"A": [1, 2]}))
   >>> domain = SparkGroupedDataFrameDomain(
   ...     {
   ...         "A": SparkIntegerColumnDescriptor(),
   ...         "B": SparkIntegerColumnDescriptor(),
   ...     },
   ...     group_keys,
   ... )
   >>> df1 = GroupedDataFrame(
   ...     spark.createDataFrame(
   ...         pd.DataFrame({"A": [1, 1, 2, 3], "B": [1, 1, 2, 4]})
   ...     ),
   ...     group_keys,
   ... )
   >>> df2 = GroupedDataFrame(
   ...     spark.createDataFrame(
   ...         pd.DataFrame({"A": [1, 2, 2, 3], "B": [1, 3, 4, 5]})
   ...     ),
   ...     group_keys,
   ... )
   >>> RootSumOfSquared(SymmetricDifference()).distance(df1, df2, domain)
   sqrt(10)
   >>> # Using HammingDistance gives a distance of infinity since the groups
   >>> # are different sizes, despite the fact that the two dataframes are the
   >>> # same size.
   >>> RootSumOfSquared(HammingDistance()).distance(df1, df2, domain)
   oo






   .. automethod:: __init__
   .. py:method:: validate(self, value)

      Raises an error if `value` not a valid distance.

      * `value` must be a nonnegative real or infinity

      :param value: A distance between two datasets under this metric.


   .. py:method:: inner_metric(self)
      :property:

      Returns metric to be used for summing.


   .. py:method:: compare(self, value1, value2)

      Returns True if `value1` is less than or equal to `value2`.

      :param value1: A distance between two datasets under this metric.
      :param value2: A distance between two datasets under this metric.


   .. py:method:: supports_domain(self, domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(self, value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(self, other)

      Return True if both metrics are equal.



   
.. py:class:: OnColumn(column, metric)

   Bases: :class:`ExactNumberMetric`

   The value of a metric applied to a single column treated as a vector.

   .. rubric:: Example

   >>> import pandas as pd
   >>> from pyspark.sql import SparkSession
   >>> from tmlt.core.domains.spark_domains import (
   ...     SparkIntegerColumnDescriptor,
   ... )

   >>> spark = SparkSession.builder.getOrCreate()
   >>> domain = SparkDataFrameDomain(
   ...     {
   ...         "A": SparkIntegerColumnDescriptor(),
   ...         "B": SparkIntegerColumnDescriptor(),
   ...     }
   ... )
   >>> value1 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [1, 23], "B": [3, 1]})
   ... )
   >>> value2 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [2, 20], "B": [1, 8]})
   ... )
   >>> OnColumn("A", SumOf(AbsoluteDifference())).distance(value1, value2, domain)
   4
   >>> OnColumn("B", RootSumOfSquared(AbsoluteDifference())).distance(
   ...     value1, value2, domain
   ... )
   sqrt(53)






   .. automethod:: __init__
   .. py:method:: column(self)
      :property:

      Return the column to apply the metric to.


   .. py:method:: metric(self)
      :property:

      Return the metric to apply.


   .. py:method:: validate(self, value)

      Raises an error if `value` not a valid distance.

      * `value` must be a a valid distance for :attr:`~.metric`

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(self, value1, value2)

      Returns True if `value1` is less than or equal to `value2`.


   .. py:method:: supports_domain(self, domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(self, value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(self, other)

      Return True if both metrics are equal.



   
.. py:class:: OnColumns(on_columns)

   Bases: :class:`Metric`

   A tuple containing the values of multiple OnColumn metrics.

   .. rubric:: Example

   >>> import pandas as pd
   >>> from pyspark.sql import SparkSession
   >>> from tmlt.core.domains.spark_domains import (
   ...     SparkIntegerColumnDescriptor,
   ... )

   >>> spark = SparkSession.builder.getOrCreate()
   >>> domain = SparkDataFrameDomain(
   ...     {
   ...         "A": SparkIntegerColumnDescriptor(),
   ...         "B": SparkIntegerColumnDescriptor(),
   ...     }
   ... )
   >>> metric = OnColumns(
   ...     [
   ...         OnColumn("A", SumOf(AbsoluteDifference())),
   ...         OnColumn("B", RootSumOfSquared(AbsoluteDifference())),
   ...     ]
   ... )
   >>> value1 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [1, 23], "B": [3, 1]})
   ... )
   >>> value2 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [2, 20], "B": [1, 8]})
   ... )
   >>> metric.distance(value1, value2, domain)
   (4, sqrt(53))






   .. automethod:: __init__
   .. py:method:: on_columns(self)
      :property:

      Return the OnColumn metrics to apply.


   .. py:method:: validate(self, value)

      Raises an error if `value` not a valid distance.

      * `value` must be a tuple with one value for each metric in :attr:`~.on_columns`
      * each value must be a valid distance for the corresponding metric

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(self, value1, value2)

      Returns True if `value1` is less than or equal to `value2`.

      :param value1: A distance between two datasets under this metric.
      :param value2: A distance between two datasets under this metric.


   .. py:method:: supports_domain(self, domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(self, value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(self, other)

      Return True if both metrics are equal.



   
.. py:class:: IfGroupedBy(column, inner_metric)

   Bases: :class:`ExactNumberMetric`

   Distance between two DataFrames that shall be grouped by a given attribute.

   This metric is an upper bound on the distance for any fixed set of grouping keys.
   This assumes that the distance between two empty groups is zero, and the inner
   metric must satisfy this property.

   The grouping column cannot contain floating point values.

   .. rubric:: Examples

   >>> import pandas as pd
   >>> from pyspark.sql import SparkSession
   >>> from tmlt.core.domains.spark_domains import (
   ...     SparkIntegerColumnDescriptor,
   ... )

   >>> spark = SparkSession.builder.getOrCreate()
   >>> domain = SparkDataFrameDomain(
   ...     {
   ...         "A": SparkIntegerColumnDescriptor(),
   ...         "B": SparkIntegerColumnDescriptor(),
   ...         "C": SparkIntegerColumnDescriptor(),
   ...     },
   ... )
   >>> metric = IfGroupedBy("C", RootSumOfSquared(SymmetricDifference()))
   >>> value1 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [1, 1, 3], "B": [2, 1, 4], "C": [1, 1, 2]}),
   ... )
   >>> value2 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [2, 1], "B": [1, 1], "C": [1, 1]})
   ... )
   >>> metric.distance(value1, value2, domain)
   sqrt(5)
   >>> metric = IfGroupedBy("C", SymmetricDifference())
   >>> value1 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [1, 1, 3], "B": [2, 1, 4], "C": [1, 1, 2]}),
   ... )
   >>> value2 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [1, 1], "B": [2, 1], "C": [1, 1]})
   ... )
   >>> metric.distance(value1, value2, domain)
   1






   .. automethod:: __init__
   .. py:method:: column(self)
      :property:

      Column that DataFrame shall be grouped by.


   .. py:method:: inner_metric(self)
      :property:

      Metric to be applied for corresponding groups.


   .. py:method:: validate(self, value)

      Raises an error if `value` not a valid distance.

      * `value` must be a a valid distance for :attr:`~.inner_metric`

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(self, value1, value2)

      Returns True if `value1` is less than or equal to `value2`.

      :param value1: A distance between two datasets under this metric.
      :param value2: A distance between two datasets under this metric.


   .. py:method:: supports_domain(self, domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(self, value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(self, other)

      Return True if both metrics are equal.



   
.. py:class:: DictMetric(key_to_metric)

   Bases: :class:`Metric`

   Distance between two dictionaries with identical sets of keys.

   .. rubric:: Example

   >>> import pandas as pd
   >>> from pyspark.sql import SparkSession
   >>> from tmlt.core.domains.spark_domains import (
   ...     SparkIntegerColumnDescriptor,
   ... )

   >>> spark = SparkSession.builder.getOrCreate()
   >>> metric = DictMetric(
   ...     {"x": AbsoluteDifference(), "y": SymmetricDifference()}
   ... )
   >>> domain = DictDomain(
   ...     {
   ...         "x": NumpyIntegerDomain(),
   ...         "y": SparkDataFrameDomain(
   ...             {
   ...                 "A": SparkIntegerColumnDescriptor(),
   ...                 "B": SparkIntegerColumnDescriptor(),
   ...             }
   ...         ),
   ...     }
   ... )
   >>> df1 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [1, 1, 3], "B": [2, 1, 4]})
   ... )
   >>> df2 = spark.createDataFrame(pd.DataFrame({"A": [2, 1], "B": [1, 1]}))
   >>> value1 = {"x": np.int64(1), "y": df1}
   >>> value2 = {"x": np.int64(10), "y": df2}
   >>> metric.distance(value1, value2, domain)
   {'x': 9, 'y': 3}






   .. automethod:: __init__
   .. py:method:: key_to_metric(self)
      :property:

      Returns mapping from keys to metrics.


   .. py:method:: validate(self, value)

      Raises an error if `value` not a valid distance.

      * `value` must be a dictionary with the same keys as :attr:`~.key_to_metric`
      * each value in the dictionary must be a valid distance under the corresponding
        metric

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(self, value1, value2)

      Returns True if `value1` is less than or equal to `value2`.

      :param value1: A distance between two datasets under this metric.
      :param value2: A distance between two datasets under this metric.


   .. py:method:: supports_domain(self, domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(self, value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __getitem__(self, key)

      Returns metric associated with given key.


   .. py:method:: __len__(self)

      Returns number of keys in the metric.


   .. py:method:: __eq__(self, other)

      Return True if both metrics are equal.



   
.. py:class:: AddRemoveKeys(column)

   Bases: :class:`Metric`

   The number of keys that dictionaries of dataframe differ by.

   This metric can be thought of as a extension of :class:`IfGroupedBy` with inner
   metric :class:`~SymmetricDifference`, except it is applied to a dictionary of
   dataframes, instead of a single dataframe.

   Both `IfGroupedBy(X, SymmetricDifference())` and `AddRemoveKeys(X)` can be described
   in the following way:

   Sum over each key that appears in column `X` in either neighbor

   - 0 if both neighbors "match" for `X = key`
   - 1 if only one neighbor has records for `X = key`
   - 2 if both neighbor have records for `X = key`, but they don't "match"

   The key column cannot containg floating point values, and all dataframes must
   have the same type for the key column.

   .. rubric:: Examples

   >>> import pandas as pd
   >>> from pyspark.sql import SparkSession
   >>> from tmlt.core.domains.spark_domains import (
   ...     SparkIntegerColumnDescriptor,
   ...     SparkStringColumnDescriptor,
   ... )
   >>> spark = SparkSession.builder.getOrCreate()
   >>> domain = DictDomain(
   ...     {
   ...         1: SparkDataFrameDomain(
   ...             {
   ...                 "A": SparkIntegerColumnDescriptor(),
   ...                 "B": SparkIntegerColumnDescriptor(),
   ...             },
   ...         ),
   ...         2: SparkDataFrameDomain(
   ...             {
   ...                 "A": SparkIntegerColumnDescriptor(),
   ...                 "C": SparkStringColumnDescriptor(),
   ...             },
   ...         ),
   ...     }
   ... )
   >>> metric = AddRemoveKeys("A")
   >>> # A=1 matches, A=2 is only in value1, A=3 is only in value2, A=4 differs
   >>> value1 = {
   ...     1: spark.createDataFrame(
   ...             pd.DataFrame(
   ...             {
   ...                 "A": [1, 1, 2],
   ...                 "B": [1, 1, 1],
   ...             }
   ...         )
   ...     ),
   ...     2: spark.createDataFrame(
   ...         pd.DataFrame(
   ...             {
   ...                 "A": [1, 4],
   ...                 "C": ["1", "1"],
   ...             }
   ...         )
   ...     )
   ... }
   >>> value2 = {
   ...     1: spark.createDataFrame(
   ...             pd.DataFrame(
   ...             {
   ...                 "A": [1, 1, 3],
   ...                 "B": [1, 1, 1],
   ...             }
   ...         )
   ...     ),
   ...     2: spark.createDataFrame(
   ...         pd.DataFrame(
   ...             {
   ...                 "A": [1, 4],
   ...                 "C": ["1", "2"],
   ...             }
   ...         )
   ...     )
   ... }
   >>> metric.distance(value1, value2, domain)
   4






   .. automethod:: __init__
   .. py:method:: column(self)
      :property:

      Returns the key column.


   .. py:method:: validate(self, value)

      Raises an error if `value` not a valid distance.

      * `value` must be a nonnegative real or infinite

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(self, value1, value2)

      Returns True if `value1` is less than or equal to `value2`.


   .. py:method:: supports_domain(self, domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(self, value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(self, other)

      Return True if both metrics are equal.






