docs/core/v0.20/_sources/reference/tmlt/core/metrics/index.rst.txt



**************
metrics
**************

.. py:module:: tmlt.core.metrics

.. autoapi-nested-parse::

   Module containing metrics used for constructing measurements and transformations.











Classes
=======

.. list-table::

   * - :class:`.Metric`
     - Base class for input/output metrics.
   * - :class:`.NullMetric`
     - Metric for use when distance is undefined.
   * - :class:`.ExactNumberMetric`
     - A metric whose distances are exact numbers.
   * - :class:`.AbsoluteDifference`
     - The absolute value of the difference of two values.
   * - :class:`.SymmetricDifference`
     - The number of elements that are in only one of two sets.
   * - :class:`.HammingDistance`
     - The number of elements that are different between two sets of the same size.
   * - :class:`.AggregationMetric`
     - Distances resulting from aggregating distances of its components.
   * - :class:`.SumOf`
     - Distances resulting from summing distances of its components.
   * - :class:`.RootSumOfSquared`
     - The square root of the sum of the squares of component distances.
   * - :class:`.OnColumn`
     - The value of a metric applied to a single column treated as a vector.
   * - :class:`.OnColumns`
     - A tuple containing the values of multiple OnColumn metrics.
   * - :class:`.IfGroupedBy`
     - Distance between two DataFrames that shall be grouped by a given set of columns.
   * - :class:`.DictMetric`
     - Distance between two dictionaries with identical sets of keys.
   * - :class:`.AddRemoveIDs`
     - The number of IDs that dictionaries of dataframe differ by.

   
.. py:class:: Metric

   Bases: :class:`tmlt.core.utils.format.Formattable`, :class:`abc.ABC`

   Base class for input/output metrics.





   .. py:attribute:: FORMAT_EXCLUDED_ATTRS
      :type:  frozenset[str]

      Attributes hidden from the formatted output.



   .. py:method:: validate(value)
      :abstractmethod:


      Raises an error if ``value`` not a valid distance.

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(value1, value2)
      :abstractmethod:


      Returns True if ``value1`` is less than or equal to ``value2``.


   .. py:method:: supports_domain(domain)
      :abstractmethod:


      Return True if the metric is implemented for the passed domain.


   .. py:method:: distance(value1, value2, domain)
      :abstractmethod:


      Returns the metric distance between two elements of a supported domain.


   .. py:method:: __eq__(other)

      Return True if both metrics are equal.


   .. py:method:: format()

      Return a human-readable multi-line description of this object.



   
.. py:class:: NullMetric

   Bases: :class:`Metric`

   Metric for use when distance is undefined.





   .. py:attribute:: FORMAT_EXCLUDED_ATTRS
      :type:  frozenset[str]

      Attributes hidden from the formatted output.



   .. py:method:: validate(value)
      :abstractmethod:


      Raises an error if ``value`` not a valid distance.

      This method is not implemented.

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(value1, value2)
      :abstractmethod:


      Returns True if ``value1`` is less than or equal to ``value2``.

      This method is not implemented.

      :param value1: A distance between two datasets under this metric.
      :param value2: A distance between two datasets under this metric.


   .. py:method:: supports_domain(domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(value1, value2, domain)
      :abstractmethod:


      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(other)

      Return True if both metrics are equal.


   .. py:method:: format()

      Return a human-readable multi-line description of this object.



   
.. py:class:: ExactNumberMetric

   Bases: :class:`Metric`

   A metric whose distances are exact numbers.





   .. py:attribute:: FORMAT_EXCLUDED_ATTRS
      :type:  frozenset[str]

      Attributes hidden from the formatted output.



   .. py:method:: distance(value1, value2, domain)
      :abstractmethod:


      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: validate(value)
      :abstractmethod:


      Raises an error if ``value`` not a valid distance.

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(value1, value2)
      :abstractmethod:


      Returns True if ``value1`` is less than or equal to ``value2``.


   .. py:method:: supports_domain(domain)
      :abstractmethod:


      Return True if the metric is implemented for the passed domain.


   .. py:method:: __eq__(other)

      Return True if both metrics are equal.


   .. py:method:: format()

      Return a human-readable multi-line description of this object.



   
.. py:class:: AbsoluteDifference

   Bases: :class:`ExactNumberMetric`

   The absolute value of the difference of two values.

   .. rubric:: Example

   >>> AbsoluteDifference().distance(
   ...     np.int64(20), np.int64(82), NumpyIntegerDomain()
   ... )
   62
   >>> # 1.2 is first converted to rational 5404319552844595/4503599627370496
   >>> AbsoluteDifference().distance(
   ...     np.float64(1.2), np.float64(1.0), NumpyFloatDomain()
   ... )
   900719925474099/4503599627370496





   .. py:attribute:: FORMAT_EXCLUDED_ATTRS
      :type:  frozenset[str]

      Attributes hidden from the formatted output.



   .. py:method:: validate(value)

      Raises an error if ``value`` not a valid distance.

      * ``value`` must be a nonnegative real or infinite

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(value1, value2)

      Returns True if ``value1`` is less than or equal to ``value2``.


   .. py:method:: supports_domain(domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(other)

      Return True if both metrics are equal.


   .. py:method:: format()

      Return a human-readable multi-line description of this object.



   
.. py:class:: SymmetricDifference

   Bases: :class:`ExactNumberMetric`

   The number of elements that are in only one of two sets.

   This metric is compatible with spark dataframes, pandas dataframes, and pandas
   series. It ignores ordering and, in the case of pandas, indices. That is, it treats
   each collection as a multiset of items. For non-grouped data, it treats each record
   as an item.

   For grouped data there are a few cases:

   - If the group keys are different, the distance is infinity
   - The distance between two groups with the same multi-set of records is 0
   - The distance between two groups where exactly one is empty is 1
   - The distance between two groups with different records (where neither is empty) is
     2

   .. rubric:: Examples

   >>> import pandas as pd
   >>> from pyspark.sql import SparkSession
   >>> from tmlt.core.domains.spark_domains import (
   ...     SparkColumnsDescriptor,
   ...     SparkIntegerColumnDescriptor,
   ... )
   >>> spark = SparkSession.builder.getOrCreate()
   >>> domain = SparkDataFrameDomain(
   ...     {
   ...         "A": SparkIntegerColumnDescriptor(),
   ...         "B": SparkIntegerColumnDescriptor(),
   ...     }
   ... )
   >>> df1 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [1, 1, 1, 2, 3], "B": [2, 2, 2, 4, 3]})
   ... )
   >>> df2 = spark.createDataFrame(pd.DataFrame({"A": [1, 2, 1], "B": [2, 4, 1]}))
   >>> SymmetricDifference().distance(df1, df2, domain)
   4
   >>> group_keys = spark.createDataFrame(pd.DataFrame({"B": [1, 2, 4]}))
   >>> domain = SparkGroupedDataFrameDomain(
   ...     {
   ...         "A": SparkIntegerColumnDescriptor(),
   ...         "B": SparkIntegerColumnDescriptor(),
   ...     },
   ...     ["B"],
   ... )
   >>> grouped_df1 = GroupedDataFrame(df1, group_keys)
   >>> grouped_df2 = GroupedDataFrame(df2, group_keys)
   >>> SymmetricDifference().distance(grouped_df1, grouped_df2, domain)
   3





   .. py:attribute:: FORMAT_EXCLUDED_ATTRS
      :type:  frozenset[str]

      Attributes hidden from the formatted output.



   .. py:method:: validate(value)

      Raises an error if ``value`` not a valid distance.

      * ``value`` must be a nonnegative integer or infinity

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(value1, value2)

      Returns True if ``value1`` is less than or equal to ``value2``.


   .. py:method:: supports_domain(domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(other)

      Return True if both metrics are equal.


   .. py:method:: format()

      Return a human-readable multi-line description of this object.



   
.. py:class:: HammingDistance

   Bases: :class:`ExactNumberMetric`

   The number of elements that are different between two sets of the same size.

   This metric is compatible with spark dataframes, pandas dataframes, and pandas
   series. It ignores ordering and, in the case of pandas, indices. That is, it treats
   each collection as a multiset of records.

   If the sets are not the same size, the distance is infinity.

   .. rubric:: Example

   >>> import pandas as pd
   >>> from pyspark.sql import SparkSession
   >>> from tmlt.core.domains.spark_domains import SparkColumnsDescriptor
   >>> from tmlt.core.domains.spark_domains import (
   ...     SparkIntegerColumnDescriptor,
   ... )
   >>> spark = SparkSession.builder.getOrCreate()
   >>> domain = SparkDataFrameDomain(
   ...     {
   ...         "A": SparkIntegerColumnDescriptor(),
   ...         "B": SparkIntegerColumnDescriptor(),
   ...     }
   ... )
   >>> df1 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [1, 1, 1, 3], "B": [2, 2, 2, 4]})
   ... )
   >>> df2 = spark.createDataFrame(pd.DataFrame({"A": [1, 2], "B": [2, 4]}))
   >>> HammingDistance().distance(df1, df2, domain)
   oo
   >>> df3 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [1, 2, 3, 1], "B": [2, 4, 4, 2]})
   ... )
   >>> HammingDistance().distance(df1, df3, domain)
   1





   .. py:attribute:: FORMAT_EXCLUDED_ATTRS
      :type:  frozenset[str]

      Attributes hidden from the formatted output.



   .. py:method:: validate(value)

      Raises an error if ``value`` not a valid distance.

      * ``value`` must be a nonnegative and integer or infinity

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(value1, value2)

      Returns True if ``value1`` is less than or equal to ``value2``.


   .. py:method:: supports_domain(domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(other)

      Return True if both metrics are equal.


   .. py:method:: format()

      Return a human-readable multi-line description of this object.



   
.. py:class:: AggregationMetric(inner_metric)

   Bases: :class:`ExactNumberMetric`

   Distances resulting from aggregating distances of its components.

   Components may be elements of a series, groups of a grouped dataframe, or
   elements of a list. This metric is parameterized by an ``inner_metric`` that
   is used to compute the distances of the components. See :class:`SumOf` or
   :class`RootSumOfSquared` for example usage.

   If the values are grouped dataframes, the groups must be the same for both values,
   or the distance is infinity.

   If the values are pandas series or lists, they must be the same size, or the
   distance is infinity. The index of the series is ignored.





   .. py:attribute:: FORMAT_EXCLUDED_ATTRS
      :type:  frozenset[str]

      Attributes hidden from the formatted output.


   .. py:property:: inner_metric
      :type: Union[AbsoluteDifference, SymmetricDifference, HammingDistance, IfGroupedBy]


      Returns metric to be used for summing.


   .. automethod:: __init__
   .. py:method:: compare(value1, value2)

      Returns True if ``value1`` is less than or equal to ``value2``.

      :param value1: A distance between two datasets under this metric.
      :param value2: A distance between two datasets under this metric.


   .. py:method:: supports_domain(domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: validate(value)
      :abstractmethod:


      Raises an error if ``value`` not a valid distance.

      :param value: A distance between two datasets under this metric.


   .. py:method:: __eq__(other)

      Return True if both metrics are equal.


   .. py:method:: format()

      Return a human-readable multi-line description of this object.



   
.. py:class:: SumOf(inner_metric)

   Bases: :class:`AggregationMetric`

   Distances resulting from summing distances of its components.

   These components may be elements of a series, groups of a grouped dataframe, or
   elements of a list. This metric is parameterized by an ``inner_metric`` that is used
   to compute the distances of the components.

   .. rubric:: Example

   >>> import pandas as pd
   >>> from pyspark.sql import SparkSession
   >>> from tmlt.core.domains.spark_domains import SparkColumnsDescriptor
   >>> from tmlt.core.domains.spark_domains import (
   ...     SparkIntegerColumnDescriptor,
   ... )
   >>> spark = SparkSession.builder.getOrCreate()

   >>> # Symmetric difference on SparkGroupedDataFrame
   >>> group_keys = spark.createDataFrame(pd.DataFrame({"A": [1, 2]}))
   >>> domain = SparkGroupedDataFrameDomain(
   ...     {
   ...         "A": SparkIntegerColumnDescriptor(),
   ...         "B": SparkIntegerColumnDescriptor(),
   ...     },
   ...     ["A"],
   ... )
   >>> df1 = GroupedDataFrame(
   ...     spark.createDataFrame(
   ...         pd.DataFrame({"A": [1, 1, 2, 3], "B": [1, 1, 2, 4]})
   ...     ),
   ...     group_keys,
   ... )
   >>> df2 = GroupedDataFrame(
   ...     spark.createDataFrame(
   ...         pd.DataFrame({"A": [1, 2, 2, 3], "B": [1, 3, 4, 5]})
   ...     ),
   ...     group_keys,
   ... )
   >>> SumOf(SymmetricDifference()).distance(df1, df2, domain)
   4
   >>> # Using HammingDistance gives a distance of infinity since the groups
   >>> # are different sizes, despite the fact that the two dataframes are the
   >>> # same size.
   >>> SumOf(HammingDistance()).distance(df1, df2, domain)
   oo

   >>> # Absolute difference on pandas series first converts the floats to
   >>> # rationals, then exactly computes the distance.
   >>> domain = PandasSeriesDomain(NumpyFloatDomain())
   >>> series1 = pd.Series([1.2, 0.8])
   >>> series2 = pd.Series([0.3, 1.4])
   >>> SumOf(AbsoluteDifference()).distance(series1, series2, domain)
   27021597764222973/18014398509481984





   .. py:attribute:: FORMAT_EXCLUDED_ATTRS
      :type:  frozenset[str]

      Attributes hidden from the formatted output.


   .. py:property:: inner_metric
      :type: Union[AbsoluteDifference, SymmetricDifference, HammingDistance, IfGroupedBy]


      Returns metric to be used for summing.


   .. automethod:: __init__
   .. py:method:: validate(value)

      Raises an error if ``value`` not a valid distance.

      * ``value`` must be a a valid distance for :attr:`~.inner_metric`

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(value1, value2)

      Returns True if ``value1`` is less than or equal to ``value2``.

      :param value1: A distance between two datasets under this metric.
      :param value2: A distance between two datasets under this metric.


   .. py:method:: supports_domain(domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(other)

      Return True if both metrics are equal.


   .. py:method:: format()

      Return a human-readable multi-line description of this object.



   
.. py:class:: RootSumOfSquared(inner_metric)

   Bases: :class:`AggregationMetric`

   The square root of the sum of the squares of component distances.

   These components may be elements of a series, groups of a grouped dataframe, or
   elements of a list. This metric is parameterized by an ``inner_metric`` that is used
   to compute the distances of the components.

   .. rubric:: Example

   >>> import pandas as pd
   >>> from pyspark.sql import SparkSession
   >>> from tmlt.core.domains.spark_domains import SparkColumnsDescriptor
   >>> from tmlt.core.domains.spark_domains import (
   ...     SparkIntegerColumnDescriptor,
   ... )
   >>> spark = SparkSession.builder.getOrCreate()

   >>> # Symmetric difference on SparkGroupedDataFrame
   >>> group_keys = spark.createDataFrame(pd.DataFrame({"A": [1, 2]}))
   >>> domain = SparkGroupedDataFrameDomain(
   ...     {
   ...         "A": SparkIntegerColumnDescriptor(),
   ...         "B": SparkIntegerColumnDescriptor(),
   ...     },
   ...     ["A"],
   ... )
   >>> df1 = GroupedDataFrame(
   ...     spark.createDataFrame(
   ...         pd.DataFrame({"A": [1, 1, 2, 3], "B": [1, 1, 2, 4]})
   ...     ),
   ...     group_keys,
   ... )
   >>> df2 = GroupedDataFrame(
   ...     spark.createDataFrame(
   ...         pd.DataFrame({"A": [1, 2, 2, 3], "B": [1, 3, 4, 5]})
   ...     ),
   ...     group_keys,
   ... )
   >>> RootSumOfSquared(SymmetricDifference()).distance(df1, df2, domain)
   sqrt(10)
   >>> # Using HammingDistance gives a distance of infinity since the groups
   >>> # are different sizes, despite the fact that the two dataframes are the
   >>> # same size.
   >>> RootSumOfSquared(HammingDistance()).distance(df1, df2, domain)
   oo





   .. py:attribute:: FORMAT_EXCLUDED_ATTRS
      :type:  frozenset[str]

      Attributes hidden from the formatted output.


   .. py:property:: inner_metric
      :type: Union[AbsoluteDifference, SymmetricDifference, HammingDistance, IfGroupedBy]


      Returns metric to be used for summing.


   .. automethod:: __init__
   .. py:method:: validate(value)

      Raises an error if ``value`` not a valid distance.

      * ``value`` must be a nonnegative real or infinity

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(value1, value2)

      Returns True if ``value1`` is less than or equal to ``value2``.

      :param value1: A distance between two datasets under this metric.
      :param value2: A distance between two datasets under this metric.


   .. py:method:: supports_domain(domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(other)

      Return True if both metrics are equal.


   .. py:method:: format()

      Return a human-readable multi-line description of this object.



   
.. py:class:: OnColumn(column, metric)

   Bases: :class:`ExactNumberMetric`

   The value of a metric applied to a single column treated as a vector.

   .. rubric:: Example

   >>> import pandas as pd
   >>> from pyspark.sql import SparkSession
   >>> from tmlt.core.domains.spark_domains import (
   ...     SparkIntegerColumnDescriptor,
   ... )

   >>> spark = SparkSession.builder.getOrCreate()
   >>> domain = SparkDataFrameDomain(
   ...     {
   ...         "A": SparkIntegerColumnDescriptor(),
   ...         "B": SparkIntegerColumnDescriptor(),
   ...     }
   ... )
   >>> value1 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [1, 23], "B": [3, 1]})
   ... )
   >>> value2 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [2, 20], "B": [1, 8]})
   ... )
   >>> OnColumn("A", SumOf(AbsoluteDifference())).distance(value1, value2, domain)
   4
   >>> OnColumn("B", RootSumOfSquared(AbsoluteDifference())).distance(
   ...     value1, value2, domain
   ... )
   sqrt(53)





   .. py:attribute:: FORMAT_EXCLUDED_ATTRS
      :type:  frozenset[str]

      Attributes hidden from the formatted output.


   .. py:property:: column
      :type: str


      Return the column to apply the metric to.

   .. py:property:: metric
      :type: Union[SumOf, RootSumOfSquared]


      Return the metric to apply.


   .. automethod:: __init__
   .. py:method:: validate(value)

      Raises an error if ``value`` not a valid distance.

      * ``value`` must be a valid distance for :attr:`~.metric`

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(value1, value2)

      Returns True if ``value1`` is less than or equal to ``value2``.


   .. py:method:: supports_domain(domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(other)

      Return True if both metrics are equal.


   .. py:method:: format()

      Return a human-readable multi-line description of this object.



   
.. py:class:: OnColumns(on_columns)

   Bases: :class:`Metric`

   A tuple containing the values of multiple OnColumn metrics.

   .. rubric:: Example

   >>> import pandas as pd
   >>> from pyspark.sql import SparkSession
   >>> from tmlt.core.domains.spark_domains import (
   ...     SparkIntegerColumnDescriptor,
   ... )

   >>> spark = SparkSession.builder.getOrCreate()
   >>> domain = SparkDataFrameDomain(
   ...     {
   ...         "A": SparkIntegerColumnDescriptor(),
   ...         "B": SparkIntegerColumnDescriptor(),
   ...     }
   ... )
   >>> metric = OnColumns(
   ...     [
   ...         OnColumn("A", SumOf(AbsoluteDifference())),
   ...         OnColumn("B", RootSumOfSquared(AbsoluteDifference())),
   ...     ]
   ... )
   >>> value1 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [1, 23], "B": [3, 1]})
   ... )
   >>> value2 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [2, 20], "B": [1, 8]})
   ... )
   >>> metric.distance(value1, value2, domain)
   (4, sqrt(53))





   .. py:attribute:: FORMAT_EXCLUDED_ATTRS
      :type:  frozenset[str]

      Attributes hidden from the formatted output.


   .. py:property:: on_columns
      :type: List[OnColumn]


      Return the OnColumn metrics to apply.


   .. automethod:: __init__
   .. py:method:: validate(value)

      Raises an error if ``value`` not a valid distance.

      * ``value`` must be a tuple with one value for each metric
        in :attr:`~.on_columns`
      * each value must be a valid distance for the corresponding metric

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(value1, value2)

      Returns True if ``value1`` is less than or equal to ``value2``.

      :param value1: A distance between two datasets under this metric.
      :param value2: A distance between two datasets under this metric.


   .. py:method:: supports_domain(domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(other)

      Return True if both metrics are equal.


   .. py:method:: format()

      Return a human-readable multi-line description of this object.



   
.. py:class:: IfGroupedBy(columns, inner_metric)

   Bases: :class:`ExactNumberMetric`

   Distance between two DataFrames that shall be grouped by a given set of columns.

   This metric is an upper bound on the distance for any fixed set of grouping keys.
   This assumes that the distance between two empty groups is zero, and the inner
   metric must satisfy this property.

   The grouping columns cannot contain floating point values.

   .. rubric:: Examples

   >>> import pandas as pd
   >>> from pyspark.sql import SparkSession
   >>> from tmlt.core.domains.spark_domains import (
   ...     SparkIntegerColumnDescriptor,
   ... )

   >>> spark = SparkSession.builder.getOrCreate()
   >>> domain = SparkDataFrameDomain(
   ...     {
   ...         "A": SparkIntegerColumnDescriptor(),
   ...         "B": SparkIntegerColumnDescriptor(),
   ...         "C": SparkIntegerColumnDescriptor(),
   ...     },
   ... )
   >>> metric = IfGroupedBy(["C"], RootSumOfSquared(SymmetricDifference()))
   >>> value1 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [1, 1, 3], "B": [2, 1, 4], "C": [1, 1, 2]}),
   ... )
   >>> value2 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [2, 1], "B": [1, 1], "C": [1, 1]})
   ... )
   >>> metric.distance(value1, value2, domain)
   sqrt(5)
   >>> metric = IfGroupedBy(["C"], SymmetricDifference())
   >>> value1 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [1, 1, 3], "B": [2, 1, 4], "C": [1, 1, 2]}),
   ... )
   >>> value2 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [1, 1], "B": [2, 1], "C": [1, 1]})
   ... )
   >>> metric.distance(value1, value2, domain)
   1





   .. py:attribute:: FORMAT_EXCLUDED_ATTRS
      :type:  frozenset[str]

      Attributes hidden from the formatted output.


   .. py:property:: columns
      :type: frozenset[str]


      Column that DataFrame shall be grouped by.

   .. py:property:: inner_metric
      :type: Union[SumOf, RootSumOfSquared, SymmetricDifference]


      Metric to be applied for corresponding groups.


   .. automethod:: __init__
   .. py:method:: validate(value)

      Raises an error if ``value`` not a valid distance.

      * ``value`` must be a valid distance for :attr:`~.inner_metric`

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(value1, value2)

      Returns True if ``value1`` is less than or equal to ``value2``.

      :param value1: A distance between two datasets under this metric.
      :param value2: A distance between two datasets under this metric.


   .. py:method:: supports_domain(domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(other)

      We want to make sure column order is ignored when computing equality.


   .. py:method:: format()

      Return a human-readable multi-line description of this object.



   
.. py:class:: DictMetric(key_to_metric)

   Bases: :class:`Metric`

   Distance between two dictionaries with identical sets of keys.

   .. rubric:: Example

   >>> import pandas as pd
   >>> from pyspark.sql import SparkSession
   >>> from tmlt.core.domains.spark_domains import (
   ...     SparkIntegerColumnDescriptor,
   ... )

   >>> spark = SparkSession.builder.getOrCreate()
   >>> metric = DictMetric(
   ...     {"x": AbsoluteDifference(), "y": SymmetricDifference()}
   ... )
   >>> domain = DictDomain(
   ...     {
   ...         "x": NumpyIntegerDomain(),
   ...         "y": SparkDataFrameDomain(
   ...             {
   ...                 "A": SparkIntegerColumnDescriptor(),
   ...                 "B": SparkIntegerColumnDescriptor(),
   ...             }
   ...         ),
   ...     }
   ... )
   >>> df1 = spark.createDataFrame(
   ...     pd.DataFrame({"A": [1, 1, 3], "B": [2, 1, 4]})
   ... )
   >>> df2 = spark.createDataFrame(pd.DataFrame({"A": [2, 1], "B": [1, 1]}))
   >>> value1 = {"x": np.int64(1), "y": df1}
   >>> value2 = {"x": np.int64(10), "y": df2}
   >>> metric.distance(value1, value2, domain)
   {'x': 9, 'y': 3}






   .. py:property:: key_to_metric
      :type: Dict[Any, Metric]


      Returns mapping from keys to metrics.


   .. automethod:: __init__
   .. py:method:: validate(value)

      Raises an error if ``value`` not a valid distance.

      * ``value`` must be a dictionary with the same keys as :attr:`~.key_to_metric`
      * each value in the dictionary must be a valid distance under the corresponding
        metric

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(value1, value2)

      Returns True if ``value1`` is less than or equal to ``value2``.

      :param value1: A distance between two datasets under this metric.
      :param value2: A distance between two datasets under this metric.


   .. py:method:: supports_domain(domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __getitem__(key)

      Returns metric associated with given key.


   .. py:method:: __len__()

      Returns number of keys in the metric.


   .. py:method:: __eq__(other)

      Return True if both metrics are equal.


   .. py:method:: format()

      Return a human-readable multi-line description of this object.



   
.. py:class:: AddRemoveIDs(df_to_id_column)

   Bases: :class:`Metric`

   The number of IDs that dictionaries of dataframe differ by.

   The metric compares dictionaries of dataframes where each row has an associated
   ID. It compares the set of IDs across all dataframes in the dictionary, and
   computes the symmetric difference.

   This metric can be thought of as a extension of :class:`IfGroupedBy` with inner
   metric :class:`~SymmetricDifference`, except it is applied to a dictionary of
   dataframes, instead of a single dataframe.

   ``AddRemoveIDs(X)`` can be described in the following way:

   Sum over each ID that appears in the ID column in either
   neighbor, where the ID column for dataframe df is given by ``X[df]``.

   - 0 if both neighbors "match" for ``X[df] = ID``
   - 1 if only one neighbor has records for ``X[df] = ID``
   - 2 if both neighbor have records for ``X[df] = ID``, but they don't "match"

   The ID column cannot contain floating point values, and all dataframes must have
   the same type for the ID column. The ID columns for the different dataframes may
   have different names.

   .. rubric:: Examples

   >>> import pandas as pd
   >>> from pyspark.sql import SparkSession
   >>> from tmlt.core.domains.spark_domains import (
   ...     SparkIntegerColumnDescriptor,
   ...     SparkStringColumnDescriptor,
   ... )
   >>> spark = SparkSession.builder.getOrCreate()
   >>> domain = DictDomain(
   ...     {
   ...         1: SparkDataFrameDomain(
   ...             {
   ...                 "A": SparkIntegerColumnDescriptor(),
   ...                 "B": SparkIntegerColumnDescriptor(),
   ...             },
   ...         ),
   ...         2: SparkDataFrameDomain(
   ...             {
   ...                 "C": SparkIntegerColumnDescriptor(),
   ...                 "D": SparkStringColumnDescriptor(),
   ...             },
   ...         ),
   ...     }
   ... )
   >>> metric = AddRemoveIDs({1: "A", 2: "C"})
   >>> # ID=1 matches, ID=2 is only in value1, ID=3 is only in value2, ID=4
   >>> # differs
   >>> value1 = {
   ...     1: spark.createDataFrame(
   ...             pd.DataFrame(
   ...             {
   ...                 "A": [1, 1, 2],
   ...                 "B": [1, 1, 1],
   ...             }
   ...         )
   ...     ),
   ...     2: spark.createDataFrame(
   ...         pd.DataFrame(
   ...             {
   ...                 "C": [1, 4],
   ...                 "D": ["1", "1"],
   ...             }
   ...         )
   ...     )
   ... }
   >>> value2 = {
   ...     1: spark.createDataFrame(
   ...             pd.DataFrame(
   ...             {
   ...                 "A": [1, 1, 3],
   ...                 "B": [1, 1, 1],
   ...             }
   ...         )
   ...     ),
   ...     2: spark.createDataFrame(
   ...         pd.DataFrame(
   ...             {
   ...                 "C": [1, 4],
   ...                 "D": ["1", "2"],
   ...             }
   ...         )
   ...     )
   ... }
   >>> metric.distance(value1, value2, domain)
   4






   .. py:property:: df_to_id_column
      :type: Dict[Any, str]


      Returns the key column.


   .. automethod:: __init__
   .. py:method:: validate(value)

      Raises an error if ``value`` not a valid distance.

      * ``value`` must be a nonnegative real or infinite

      :param value: A distance between two datasets under this metric.


   .. py:method:: compare(value1, value2)

      Returns True if ``value1`` is less than or equal to ``value2``.


   .. py:method:: supports_domain(domain)

      Return True if the metric is implemented for the passed domain.

      :param domain: The domain to check against.


   .. py:method:: distance(value1, value2, domain)

      Return the metric distance between two elements of a supported domain.

      :param value1: An element of the domain.
      :param value2: An element of the domain.
      :param domain: A domain compatible with the metric.


   .. py:method:: __eq__(other)

      Return True if both metrics are equal.


   .. py:method:: format()

      Return a human-readable multi-line description of this object.






